# docs

./: CODEBASE_ANALYSIS_REPORT.md  OMIUM_COMPLETE_TECHNICAL_DOCUMENTATION.md  RUN_MIGRATIONS_NOW.sql  test_auth_setup.py
Omium_Doc/: 1. Problem Validation – Reliability Gaps Are Real and Costly.md  ARCH.md  CLI_ALIGNMENT_AND_PROGRESS.md  CLI_STRATEGY_AND_RESEARCH.md  EXECUTION_DEBUGGING_AND_PROGRESS.md  Let's get back to what we were into the technical.md  OMIUM_IMPLEMENTATION_PLAN.md  OMIUM_TECHNICAL_SOLUTION_DOCUMENT.md  OMIUM_USER_FLOW_AND_INTEGRATION_DESIGN.md  Omium - Plan.md  Omium-Deployment.md  Omium-Full-Spec.md  Omium-HLD-Architecture.md  Omium-LLD-Complete.md  You know the face by face timeline which you provi.md  You know what I I loved it seriously I loved it I.md  before you proceed with them, want you to tell me.md
The_Plan/: EXECUTIVE_SUMMARY.md  OMIUM_PLAYBOOK.md  README_START_HERE.md  RECOVERY_DEEP_DIVE.md  TECHNICAL_EXECUTION_GUIDE.md
crewai_workflow/: README.md  pyproject.toml  test_workflow.json  workflow.json
crewai_workflow/src/competitor_analysis_workflow/: crew.py  main.py
crewai_workflow/src/competitor_analysis_workflow/config/: agents.yaml  tasks.yaml
docs/: docs.json  index.mdx  intro.mdx  mint.json
docs/api-reference/: billing.mdx  checkpoints.mdx  executions.mdx  failures.mdx  workflows.mdx
docs/configuration/: environment.mdx  omium-toml.mdx
docs/examples/: examples.mdx
docs/getting-started/: configure.mdx  first-project.mdx  (+3 more)
test-projects/: README.md  crewai_research_workflow.py  langgraph_calculator_workflow.py
(+8 files in other folders)
