[project]
name = "competitor_analysis_workflow"
version = "0.1.0"
description = "competitor_analysis_workflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
]

[project.scripts]
competitor_analysis_workflow = "competitor_analysis_workflow.main:run"
run_crew = "competitor_analysis_workflow.main:run"
train = "competitor_analysis_workflow.main:train"
replay = "competitor_analysis_workflow.main:replay"
test = "competitor_analysis_workflow.main:test"
run_with_trigger = "competitor_analysis_workflow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
